Issue 38708: Fix home page layout issues

--- a/app/Connector/packages/connector-theme/sass/var/Component.scss
+++ b/app/Connector/packages/connector-theme/sass/var/Component.scss
@@ -1068,8 +1068,6 @@ text.study-label {
     }
     .tile-image {
       padding-top: 20px;
-      width: 25%;
-      padding-left: 7%;
     }
 
     .tile-title {
@@ -1087,8 +1085,8 @@ text.study-label {
       padding-bottom: 5px;
     }
     .backgroundimage {
-      height: 200px;
-      width: 200px;
+      height: 220px;
+      width: 220px;
       background-size: 100%;
       margin-bottom: 30px;
     }
